Signed-off-by: htmlmi <4370142@qq.com>

--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: hexo-theme-aomori
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: git@github.com:htmlmi/hexodemo.git
+  branch: pg-hexo
